--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <input type="text" class="search-input" placeholder="Search">
+    <div class="video-container">
     <div class="video-preview">
       <div class="image">
        <img src="thumbnails/thumbnail-1.webp" class="img-1">
@@ -27,8 +28,7 @@
     <div class="video-preview">
       <div class="image">
        <img src="thumbnails/thumbnail-2.webp" class="img-1">
-      </div>
-      <div class="video-info">
+      </div><div class="video-info">
         <div class="channel-pic">
           <img class="profile-pic" src="channel-pictures/channel-2.jpeg">
         </div>
@@ -39,9 +39,81 @@
         </div>
       </div>
     </div>
+     <div class="video-preview">
+      <div class="image">
+       <img src="thumbnails/thumbnail-3.webp" class="img-1">
+      </div><div class="video-info">
+        <div class="channel-pic">
+          <img class="profile-pic" src="channel-pictures/channel-3.jpeg">
+        </div>
+        <div class="video-real-info">
+        <p class="intro-para">Crazy Tik Toks Taken Moments Before DISASTER</p>
+        <p class="video-author">SSSniperWolf</p>
+        <p class="video-stats">12M views &#183; 1 year ago</p>
+        </div>
+      </div>
+    </div>
+        <div class="video-preview">
+      <div class="image">
+       <img src="thumbnails/thumbnail-4.webp" class="img-1">
+      </div>
+      <div class="video-info">
+        <div class="channel-pic">
+          <img class="profile-pic" src="channel-pictures/channel-4.jpeg">
+        </div>
+        <div class="video-real-info">
+        <p class="intro-para">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+        <p class="video-author"></p>Veritasium
+</p>
+        <p class="video-stats">18M views &#183; 4 months ago</p>
+        </div>
+      </div>
+    </div>
+    <div class="video-preview">
+      <div class="image">
+       <img src="thumbnails/thumbnail-5.webp" class="img-1">
+      </div><div class="video-info">
+        <div class="channel-pic">
+          <img class="profile-pic" src="channel-pictures/channel-5.jpeg">
+        </div>
+        <div class="video-real-info">
+        <p class="intro-para">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
+        <p class="video-author">CS Dojo</p>
+        <p class="video-stats">519K views &#183; 5 years ago</p>
+        </div>
+      </div>
+    </div>
+     <div class="video-preview">
+      <div class="image">
+       <img src="thumbnails/thumbnail-6.webp" class="img-1">
+      </div><div class="video-info">
+        <div class="channel-pic">
+          <img class="profile-pic" src="channel-pictures/channel-6.jpeg">
+        </div>
+        <div class="video-real-info">
+        <p class="intro-para">Anything You Can Fit In The Circle I’ll Pay For</p>
+        <p class="video-author">MrBeast</p>
+        <p class="video-stats">141M views &#183; 1 year ago</p>
+        </div>
+      </div>
+    </div>
+
+    </div>
 
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
