--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -10,7 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <input type="text" class="search-input" placeholder="Search">
+    <div class="header">
+      <div class="left-section">
+        left-section
+      </div>
+      <div class="middle-section">
+        <input type="text" class="search-input" placeholder="Search">
+      </div>
+      <div class="right-section">
+        right-section
+      </div>
+    </div>
     <div class="video-container">
     <div class="video-preview">
       <div class="image">
