--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -9,9 +9,12 @@
 
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
     <link rel="stylesheet" href="styles/video.css">
   </head>
-  <body>
+  <body
+  style="padding-top: 80px;
+  height: 3000px;">
     <div class="header">
       <div class="left-section">
         <img class="hamburger-menu" src="icons/hamburger-menu.svg">
@@ -33,11 +36,22 @@
         <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
       </div>
     </div>
-
+    <div class="sidebar">
+      sidebar
+     <div class="sidebar-link"></div>
+     <div class="sidebar-link"></div> 
+     <div class="sidebar-link"></div> 
+     <div class="sidebar-link"></div> 
+     <div class="sidebar-link"></div> 
+     <div class="sidebar-link"></div>  
+    </div>
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+           <div class="time-stamp">
+              14:20
+            </div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -60,6 +74,9 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <div class="time-stamp">
+              20:20
+            </div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -82,6 +99,9 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+          <div class="time-stamp">
+              14:20
+            </div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -104,6 +124,9 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+          <div class="time-stamp">
+              14:20
+            </div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -126,6 +149,9 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+          <div class="time-stamp">
+              14:20
+            </div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -148,6 +174,9 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+          <div class="time-stamp">
+              14:20
+            </div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
